2009-12-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data (added):
	* data/mushin-maemo.desktop (added):
	  Add a desktop file.

2009-12-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* setup.py (added):
	  Add a setup.py to package.

2009-12-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/display.py:
	* python/mushin/command/main.py:
	  Properly handle not having any results at all for title.

2009-12-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Handle the case where there really are no tasks found anymore for
	  the given urgency, and so we shouldn't show any open things.

2009-12-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/app.py:
	  Add a limit kwarg for due and overdue so we can get shorter lists.
	  Remove duplicate functions.
	* python/mushin/maemo/things.py:
	  Add deadline info to list of things.
	* python/mushin/maemo/start.py:
	  Add lists for due this week.
	* python/mushin/maemo/show.py:
	  Show tasks in 4 columns so we can fit more things in.

2009-12-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/extern/paisley/couchdb.py:
	  Merged revision 24 of my object-views branch, updating view
	  URL to 0.10

2009-12-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/views/contexts (added):
	* couchdb/views/contexts/reduce.js (added):
	* couchdb/views/contexts/map.js (added):
	  Add a list of contexts.
	* python/mushin/common/app.py:
	  Add functions to get contexts and projects.
	* python/mushin/maemo/new.py:
	  Query list of projects and contexts for selector.
	* python/mushin/maemo/start.py:
	  Add add_projects/contexts; use them to set examples from main.

2009-12-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/views/by-status/map.js:
	* python/mushin/common/app.py:
	* python/mushin/maemo/start.py:
	  Fix up status, add next action.
