@@ -1,3 +1,8 @@
+2009-12-26  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* python/mushin/command/replicate.py:
+	  Catch another possible exception.
+
 2009-12-24  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* data (added):
